# code-specialist-7b

./: .gitattributes  .gitignore  README-english.md  README.md  app.py  benchmark_tasks.py  code-specialist-7b Notebook.ipynb  pyproject.toml  requirements.txt
Mistral-7B-Python-Expert-v1-final/: special_tokens_map.json
lora-adapters/: adapter_config.json  adapter_model.safetensors
